--- a/port.html
+++ b/port.html
@@ -77,6 +77,7 @@
 
         <div class="footdiv3">
             <h3>CONNECT</h3><br>
+            <p>Follow me on Social media</p>
         </div>
 
     </div>
