--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <div class="footdiv2">
             <h3>QUICK LINK</h3><br>
 
-            <p><a href="http://127.0.0.1:5500/port.html">HOME</a></p>
-            <p><a href="http://127.0.0.1:5500/about.html">ABOUT</a></p>
-            <p><a href="http://127.0.0.1:5500/work.html">WORK</a></p>
+            <p><a href="/index.html">HOME</a></p>
+            <p><a href="/about.html">ABOUT</a></p>
+            <p><a href="/work.html">WORK</a></p>
         </div>
 
         <div class="footdiv3">
