--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="logo"><img src="" alt="">LOGO</div>
 
         <div class="navlink">
-            <a href="http://127.0.0.1:5500/port.html">HOME</a>
-            <a href="http://127.0.0.1:5500/about.html">ABOUT</a>
-            <a href="http://127.0.0.1:5500/work.html">WORK</a>
+            <a href="/index.html">HOME</a>
+            <a href="/about.html">ABOUT</a>
+            <a href="/work.html">WORK</a>
             <a href="">CONTACT</a>
             <div class="dropcontent">
                 <p>efefefefeggwfwsfwfwfwf</p>
