--- a/work.html
+++ b/work.html
@@ -13,9 +13,9 @@
         <div class="logo"><img src="" alt="">LOGO</div>
 
         <div class="navlink">
-            <a href="http://127.0.0.1:5500/port.html">HOME</a>
-            <a href="http://127.0.0.1:5500/about.html">ABOUT</a>
-            <a href="http://127.0.0.1:5500/work.html">WORK</a>
+            <a href="/index.html">HOME</a>
+            <a href="/about.html">ABOUT</a>
+            <a href="/work.html">WORK</a>
             <a href="">CONTACT</a>
             <span></span>   
         </div>
@@ -31,9 +31,9 @@
         <div class="footdiv2">
             <h3>QUICK LINK</h3><br>
 
-            <p><a href="http://127.0.0.1:5500/port.html">HOME</a></p>
-            <p><a href="http://127.0.0.1:5500/about.html">ABOUT</a></p>
-            <p><a href="http://127.0.0.1:5500/work.html">WORK</a></p>
+            <p><a href="/index.html">HOME</a></p>
+            <p><a href="/about.html">ABOUT</a></p>
+            <p><a href="/work.html">WORK</a></p>
         </div>
 
         <div class="footdiv3">
