--- a/about.html
+++ b/about.html
@@ -38,28 +38,53 @@
                 <p>When I’m not coding, I explore new technologies, work on personal projects, or contribute to open-source communities.</p><br>
             </div>
     </div>
-    </nav>
+    
+    <div class="aboutskillsmain">
+    <div class="aboutskills">
+        <ul>
+            <h3>SKILLS</h3><br>
 
-<footer class="footer">
-    <div class="maindiv">
-        <div class="footdiv1">
-            <h3>FINOOB FASAL</h3><br>
-            <p>Python Full-stack Developer</p>
-        </div>
-
-        <div class="footdiv2">
-            <h3>QUICK LINK</h3><br>
-
-            <p><a href="/index.html">HOME</a></p>
-            <p><a href="/about.html">ABOUT</a></p>
-            <p><a href="/work.html">WORK</a></p>
-        </div>
-
-        <div class="footdiv3">
-            <h3>CONNECT</h3><br>
-        </div>
-
+            <li>HTML, CSS, JavaScript</li>
+            <li>Responsive Web Design</li>
+            <li>Basic React (learning)</li>
+            <li>UI/UX Fundamentals</li>
+            <li>Version Control (Git)</li>
+        </ul>
     </div>
-</footer>
+    <div class="aboutskills2">
+        <ul>
+            <h3>Interests</h3><br>
+            <p>Beyond coding, I love exploring:</p>
+
+            <li>Creative web design ideas</li>
+            <li>AI-powered tools</li>
+            <li>Photography and aesthetic visuals</li>
+            <li>Minimalistic digital art</li>
+        </ul>
+    </div>
+    </div>
+
+
+    <footer class="footer">
+        <div class="maindiv">
+            <div class="footdiv1">
+                <h3>FINOOB FASAL</h3><br>
+                <p>Python Full-stack Developer</p>
+            </div>
+
+            <div class="footdiv2">
+                <h3>QUICK LINK</h3><br>
+
+                <p><a href="/index.html">HOME</a></p>
+                <p><a href="/about.html">ABOUT</a></p>
+                <p><a href="/work.html">WORK</a></p>
+            </div>
+
+            <div class="footdiv3">
+                <h3>CONNECT</h3><br>
+            </div>
+
+        </div>
+    </footer>
 </body>
 </html>
