--- a/work.html
+++ b/work.html
@@ -21,6 +21,49 @@
         </div>
     </nav>
 
+    
+    <div class="work">
+    <h1>My Work</h1><br>
+
+    <p>Here’s a look at some of the projects I’ve built to learn, grow, and express my creativity through code and design.</p>
+    </div>
+    <div style="padding: 10px;">
+    <div class="maincard1">
+        <div class="card1">
+            <h3>Portfolio Website</h3><br>
+            <p>Tech Used: HTML, CSS, JavaScript</p><br>
+            <p>A clean and minimal personal portfolio that highlights my projects and skills. Designed to be responsive across all devices with smooth scroll animations and a modern layout.</p>
+        </div>
+
+        <div class="card2">
+            <h3>Landing Page Design</h3><br>
+            <p>Tech Used: HTML, CSS</p><br>
+            <p>A stylish landing page for a fashion brand concept. Focused on layout structure, typography, and color balance to create a visually appealing interface.</p>
+        </div>
+
+        <div class="card3">
+            <h3>To-Do Web App</h3><br>
+            <p>Tech Used: HTML, CSS, JavaScript</p><br>
+            <p>A simple and interactive to-do list that allows users to add, edit, and delete tasks. It helped me understand DOM manipulation and event handling in JavaScript.</p>
+        </div>
+    </div>
+
+    <div class="maincard2">
+        <div class="card4">
+            <h3>Responsive Blog Page</h3><br>
+            <p>Tech Used: HTML, CSS (Flexbox & Grid)</p><br>
+            <p>A responsive blog layout that adjusts seamlessly to any screen size. This project helped me practice layout design and mobile-friendly development.</p>
+        </div>
+
+        <div class="card5">
+            <h3>AI Info Page (Learning Project)</h3><br>
+            <p>Tech Used: HTML, CSS, JS</p><br>
+            <p>A small informative page explaining “The Power of Generative AI” with smooth animations and modern typography — combining creativity with tech curiosity.</p>
+        </div>
+    </div>
+    </div>
+
+
 <footer class="footer">
     <div class="maindiv">
         <div class="footdiv1">
